--- a/components/cgp88o0tu-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/cgp88o0tu-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: cgp88o0tu-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-e3ed5e87fd.gxpf.p3.openshiftapps.com/rhtap/rhtap-qe:b5edf27115eabbd03f329ef50a3dfa30b57380d2@sha256:0a064ff2cb15518e4a15e1900de1ef9d68d1c37c5275b564ab75e6ac195f623e
+          name: container-image
